<resources>
    <string name="app_name">Новинна стрічка НВК№240</string>
    <string name="err">Помилка</string>
    <string name="sys">Система</string>
    <string name="nobody">Невідомий автор</string>
    <string name="err_stat">Статистика помилок</string>
    <string name="cheat_on">Режим шпаргалки розблоковано</string>
    <string name="need_update">Поточна версія застаріла\nОновіть додаток до нової версії\nЗ (%vSec%) до (%vNew%)</string>

    <string name="sw_moder">Відомості про помилки</string>

    <string name="tab_name">Новинна стрічка</string>
    <string name="tab_settings">Мій кабінет</string>
    <string name="tab_info">Інформація</string>
    <string name="tab_update">Оновлення</string>
    <string name="tab_create">Створення поста</string>
    <string name="tab_lib">Бібліотека</string>
    <string name="tab_cheat"># Шпоры</string>

    <string name="copy_button">Копіювати шаблон</string>
    <string name="apply_button">Застосувати</string>
    <string name="update_button">Оновити додаток</string>
    <string name="up_url_button">Копіювати ссилку</string>

    <string name="hint_input_title">Зоголовок поста</string>
    <string name="hint_input_text">Текст поста</string>
    <string name="hint_input_id">Введіть свій ID</string>
    <string name="hint_input_pass">Введіть пароль</string>
    <string name="hint_input_key">Введіть ключ</string>

    <string name="info">
    Вся інформація про програму:
\n\n
    Цей додаток створено Б. Ратміром Мірошниченко, на даний момент - учнем 10в класу.
\n\n
    Дякую що встановили цей додаток, теперь Ви можете слідкувати за новинами нашої школи!
\n\n
    Я думаю, інтерфейс інтуїтивно зрозумілий, так що пояснювати дрібні деталі не бачу сенсу, Ви повинні будете розібратися.
\n\n
    У додатку є кілька типів постів:\n
    • Сірий - системний\n
    • Синій - тихий\n
    • Зелений - звичайний\n
    • Червоний - терміновий
\n\n
    Тип поста ні на що не впливає крім як швидкої класифікації поста для користувача. Простіше кажучи - що б Вам було зручніше.
\n\n
    Додаток створено під керівництвом Олега Н. - нового президента школи.
\n\n
    До речі, все що Ви тут бачите зроблено вручну єдиним розробником.
    Бачите, головне - дати хороший стимул і бажання, і навіть такі як можуть зробити щось дотепне!
\n\n
    Гарного навчання та просто - удачі!</string>

    <string name="create">
    Тут Ви можете створити шаблон поста.
\n\n
    Ви не можете самостійно публікувати пости, це привілей керуючих,
    щоб уникнути перенавантажень та іншого непотребства.
    (Лол, я не очікував що буду використовувати цензуру!)
\n\n
    Даний шаблон можна передати керуючим (Н. Олег, М. Ратмір)
    для подальшої перевірки та публікації, можливо, з редагуванням.</string>

    <string name="update">
    Посилання оновлення: %vUpUrl%
\n\n
    Поточна версія: %vSec%
\n
    Серверна версія: %vNew%
\n\n
    Будь ласка, натисніть на кнопку в нижній частині сторінки щоб оновити цей додаток.
\n\n
    Якщо програма не оновлюється, скопіюйте посилання та спробуйте оновити самостійно.
\n\n
    Додатком можно користуватись не оновлюючи, проте це може привести до помилок і збоїв, дякую!
\n\n\n
     - Про новішу версію %vNew%:
\n\n
    %vInf%</string>

    <string name="menu">Ви знаходитесь в меню\n\nОберіть один з пунктів, або натисніть на екран</string>
</resources>
