<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cont"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menu.UpdateActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.25"
        android:contentDescription="@string/err"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ms_title2"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/ms_title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/tab_update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ms_fab_menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="backToPosts"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/ms_title2"
        app:layout_constraintEnd_toEndOf="@+id/ms_title2"
        app:layout_constraintTop_toTopOf="@+id/ms_title2"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/info_labe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/update"
        android:textColor="@color/tc_n"
        app:layout_constraintBottom_toTopOf="@+id/update_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ms_title2" />

    <Button
        android:id="@+id/update_but_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-medium"
        android:onClick="copyUrlToLoad"
        android:text="@string/up_url_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/update_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-medium"
        android:onClick="updateFromCloud"
        android:text="@string/update_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/update_but_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>